# dist

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dummy-code
app/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake
src/: CMakeLists.txt  entrypoint.cpp  execution.cpp  lexing.cpp
